fix: unchecked query parameter
